syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package pb.v1;
option java_package = "co.ledger.lama.manager.protobuf";

// Exposes a gRPC interface to manage synchronization of
// account infos and transactions.
service AccountManagerService {
    rpc RegisterAccount(RegisterAccountRequest) returns (SyncEventResult) {}
    rpc UpdateAccount(UpdateAccountRequest) returns (google.protobuf.Empty) {}
    rpc ResyncAccount(ResyncAccountRequest) returns (SyncEventResult) {}
    rpc UnregisterAccount(UnregisterAccountRequest) returns (SyncEventResult) {}
    rpc GetAccountInfo(AccountInfoRequest) returns (AccountInfoResult) {}
    rpc GetAccounts(GetAccountsRequest) returns (AccountsResult) {}
    rpc GetSyncEvents(GetSyncEventsRequest) returns (GetSyncEventsResult) {}
}

message GetAccountsRequest {
    GroupLabel group = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message AccountsResult {
    repeated AccountInfoResult accounts = 1;
    int32 total = 2;
}

message RegisterAccountRequest {
    // KeychainId for Bitcoin or PublicKey for account based coins
    string key = 1;
    CoinFamily coin_family = 2;
    Coin coin = 3;
    uint64 sync_frequency = 4;
    AccountLabel label = 5;
    GroupLabel group = 6;
}

message AccountLabel {
    string value = 1;
}

message GroupLabel {
    string value = 1;
}


message UpdateAccountRequest {
    bytes account_id = 1;

    message Info {
        uint64 sync_frequency = 1;
        string label = 2;
    }

    oneof field {
        uint64 sync_frequency = 2;
        string label = 3;
        Info info = 4;
    }
}

message ResyncAccountRequest {
    bytes account_id = 1;
    bool wipe = 2;
}

message UnregisterAccountRequest {
    bytes account_id = 1;
}

message SyncEventResult {
    bytes account_id = 1;
    bytes sync_id = 2;
}

message AccountInfoRequest {
    bytes account_id = 1;
}

message AccountInfoResult {
    bytes account_id = 1;
    string key = 2;
    uint64 sync_frequency = 3;
    SyncEvent last_sync_event = 4;
    CoinFamily coin_family = 5;
    Coin coin = 6;
    AccountLabel label = 7;
    GroupLabel group = 8;
}

message GetSyncEventsRequest {
    bytes account_id = 1;
    int32 limit = 2;
    int32 offset = 3;
    SortingOrder sort = 4;
}

message GetSyncEventsResult {
    repeated SyncEvent sync_events = 1;
    int32 total = 2;
}

message SyncEvent {
    bytes account_id = 1;
    bytes sync_id = 2;
    string status = 3;
    bytes cursor = 4;
    bytes error = 5;
    google.protobuf.Timestamp time = 6;
}

enum SortingOrder {
    DESC = 0;
    ASC = 1;
}

enum CoinFamily {
    bitcoin = 0;
}

enum Coin {
    btc = 0;
    btc_testnet = 1;
    btc_regtest = 2;
    ltc = 3;
}
